web-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    run: web-service
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: web-app
