ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: naveen.task.com
   http:
     paths:
     - path: /*
       backend:
         serviceName: web
         servicePort: 8080
